// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Display/Logo Black 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  width: 250px;
  margin-left: -40px;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
}

.c1 img {
  width: auto;
  max-width: 100%;
  max-height: 100%;
  height: auto;
  display: block;
}

@media screen and (max-width:991px) {
  .c1 {
    margin-left: -20px;
  }
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Black Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Black Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo Flat 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  width: 250px;
  margin-left: -40px;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
}

.c1 img {
  width: auto;
  max-width: 100%;
  max-height: 100%;
  height: auto;
  display: block;
}

@media screen and (max-width:991px) {
  .c1 {
    margin-left: -20px;
  }
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Flat Blue Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Flat Blue Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo Gradient 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  width: 250px;
  margin-left: -40px;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
}

.c1 img {
  width: auto;
  max-width: 100%;
  max-height: 100%;
  height: auto;
  display: block;
}

@media screen and (max-width:991px) {
  .c1 {
    margin-left: -20px;
  }
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - Gradient Logo"
        src="test-file-stub"
        title="HSD Mechatronics - Gradient Logo"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Display/Logo White 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  width: 250px;
  margin-left: -40px;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
}

.c1 img {
  width: auto;
  max-width: 100%;
  max-height: 100%;
  height: auto;
  display: block;
}

@media screen and (max-width:991px) {
  .c1 {
    margin-left: -20px;
  }
}

<div
  className="c0"
>
  <div
    style={
      {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <img
        alt="HSD Mechatronics - White Logo"
        src="test-file-stub"
        title="HSD Mechatronics - White Logo"
      />
    </div>
  </div>
</div>
`;
